--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ subjects:
 - !lcsh 'Fiction'
 - !lcsh 'Short stories, Canadian'
 - !lcc 'PS'
+- GITenberg
 tableOfContents: To cross the bay -- Upturn the rock -- Seaeggs -- The hire -- The
   nightlamp -- The strongbox -- The sandpit -- The wager -- Errands -- Ponchontas
   -- The bloodfish -- The garden patch -- The monarch -- Brébeuf -- City the insects
